fix post comments and voting
